# EmoCare

./: README.md
backend/: pyproject.toml  requirement.txt
backend/app/: main.py  models.py
backend/app/api/: chats.py  emotion.py  ollama_client.py  routes.py  voice.py
backend/app/api/utils/: safety.py
backend/app/core/: config.py  logger.py  timezone.py
backend/app/services/: chat_service.py  crisis_detector.py  language_detector.py  translation.py  voice_service.py
backend/app/utils/: safety.py
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/values-night-v31/: styles.xml
frontend/app/: .flutter-plugins-dependencies  .gitignore  .metadata  README.md  pubspec.yaml
frontend/app/android/: local.properties
frontend/app/android/app/src/main/: AndroidManifest.xml
frontend/app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/app/ios/Runner/: GeneratedPluginRegistrant.m
frontend/app/lib/: main.dart
frontend/app/lib/config/: app_config.dart  supabase_config.dart
frontend/app/lib/screens/: chat_screen.dart  mood_insights_screen.dart  settings_screen.dart  splash_screen.dart
frontend/app/lib/services/: chat_service.dart
frontend/app/lib/utils/: helpers.dart
frontend/app/linux/flutter/ephemeral/.plugin_symlinks/: app_links_linux  gtk  path_provider_linux  record_linux  shared_preferences_linux  url_launcher_linux
frontend/app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
frontend/app/test/: widget_test.dart
(+5 files in other folders)
